# roverrobotics_stack

./: 1  README.md
opscripts/: env.sh  install.sh  roscore.service  roverrobotics  roverrobotics.service
rr_canrover_driver/: CMakeLists.txt  README.md
rr_canrover_driver/config/: ps4_controller_config.yaml  ps4_driver_config.yaml
rr_canrover_driver/include/: canrover.hpp
rr_canrover_driver/launch/: zero.launch
rr_canrover_driver/src/: canrover_driver.cpp
rr_control_input_manager/: CHANGELOG.rst  CMakeLists.txt  package.xml
rr_control_input_manager/scripts/: ps4_mapper.py  xbox_mapper.py
rr_openrover_description/: CHANGELOG.rst  package.xml
rr_openrover_driver/: CHANGELOG.rst  package.xml
rr_openrover_driver/launch/: slampack_bringup.launch  starterkit_bringup.launch
rr_openrover_driver_msgs/: CHANGELOG.rst  package.xml
rr_openrover_simulation/: CHANGELOG.rst  package.xml
rr_openrover_stack/: CHANGELOG.rst  package.xml
rr_rover_zero_driver/: CHANGELOG.rst  CMakeLists.txt  package.xml
rr_rover_zero_driver/config/: ps4_controller_config.yaml
rr_rover_zero_v2_description/: CHANGELOG.rst  CMakeLists.txt  package.xml
rr_rover_zero_v2_description/meshes/wheels/: dshape_wheel.stl  octagon_wheel.stl
rr_rover_zero_v2_description/urdf/: rr_rover_zero_v2_dshape.urdf.xacro  rr_rover_zero_v2_octagon.urdf.xacro  rr_rover_zero_v2_rover.urdf.xacro
rr_rover_zero_v2_driver/: CMakeLists.txt  README.md  package.xml
rr_rover_zero_v2_driver/config/: amcl.yaml  base_local_planner.yaml  driver.yaml  gmapping.yaml  gmapping_params.yaml  lidar_config.yaml  ps4_controller.yaml  ps4_controller_config.yaml
rr_rover_zero_v2_driver/include/rr_rover_zero_v2_driver/: datatypes.h  rr_rover_zero_v2_driver.h  vesc_interface.h  vesc_packet.h  vesc_packet_factory.h
rr_rover_zero_v2_driver/launch/: bringup.launch  teleop.launch
rr_rover_zero_v2_driver/launch/includes/: description.launch.xml
rr_rover_zero_v2_driver/src/: rr_rover_zero_v2_driver.cpp  rr_rover_zero_v2_driver_node.cpp  vesc_interface.cpp  vesc_packet.cpp  vesc_packet_factory.cpp
rr_rover_zero_v2_driver_msgs/: CMakeLists.txt  package.xml
rr_rover_zero_v2_driver_msgs/msg/: VescState.msg  VescStateStamped.msg
rr_rover_zero_v2_navigation/: CHANGELOG.rst  CMakeLists.txt  package.xml
rr_rover_zero_v2_navigation/config/: amcl.yaml  base_local_planner.yaml  config.yaml  costmap_common_dshape.yaml  dwa_local_planner_dshape.yaml  dwa_local_planner_octagon.yaml  global_costmap.yaml  local_costmap.yaml  move_base.yaml
rr_rover_zero_v2_navigation/maps/: map.pgm  map.yaml
rr_roverzero_can/: CMakeLists.txt  package.xml
rr_roverzero_can/src/: canrover_driver.cpp
udev/: roverrobotics.rules
vesc_driver/: CMakeLists.txt
vesc_driver/config/: ps4_controller_config.yaml
vesc_driver/include/vesc_driver/: datatypes.h  vesc_driver.h  vesc_interface.h  vesc_packet.h
vesc_driver/launch/: vesc_driver_node.launch
vesc_driver/src/: vesc_driver.cpp  vesc_interface.cpp  vesc_packet.cpp
vesc_msgs/: package.xml
vesc_msgs/msg/: VescState.msg
